--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <!DOCTYPE>
+<html>
+  <head><title>Legion Craft!</title></head>
+  <body>
+    <p>
+      Hi Keith!
+    </p>
+    <?php
+    $hi = Hi Zachary!
+    if($hi == "Hi Zach!"){
+      print $hi;
+    }else{
+      print "Bitch you ain't special!";
+    }
+    ?>
+  </body>
+</html>
