--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <p>
       Hi Keith!
     </p>
-    <?php
-    $hi = Hi Zachary!
-    if($hi == "Hi Zach!"){
-      print $hi;
-    }else{
-      print "Bitch you ain't special!";
+    <p><script>
+    var script = 15
+    var spam = Hi!
+    var function = function(spam, script){
+      Conosle.log(spam * script);
     }
-    ?>
+    
+    function(spam, script)
+    </script>
+    </P>
   </body>
 </html>
